--- a/index.html
+++ b/index.html
@@ -25,11 +25,43 @@
     <main>
         <section id="inicio">
             <div class="banner">
-                <img src="/assets/jeep-wrangler-bloqueador-diferencial-desk.webp" alt="">
+                <img src="/assets/jeep-wrangler-bloqueador-diferencial-desk.webp" alt="Jeep Wrangler Bloqueador Diferencial">
+            </div>
+            <h1>Exclusivo <span>Motor 2.0</span> Turbo</h1>
+            <div class="lama">
+                <img src="/assets/transparente-lama.webp" alt="">
             </div>
         </section>
         <section id="galeria">
-
+            <div class="galeria">
+                <h2>Galeria <span>de Fotos</span></h2>
+                <div class="thumbs">
+                    <div class="thumb">
+                        <img src="/assets/jeep-wrangler-bloqueador-diferencial-desk.webp" alt="">
+                    </div>
+                    <div class="thumb">
+                        <img src="/assets/RUBICON-trail-rated-mobile.webp" alt="">
+                    </div>
+                    <div class="thumb">
+                        <img src="/assets/Jeep-wrangler-barra-estabilizadora-desk.webp" alt="">
+                    </div>
+                    <div class="thumb">
+                        <img src="/assets/jeep-rubicon-red.webp" alt="">
+                    </div>
+                    <div class="thumb">
+                        <img src="/assets/jeep-wrangler-rubicon-gray.webp" alt="">
+                    </div>
+                    <div class="thumb">
+                        <img src="/assets/jeep-wrangler-white.webp" alt="">
+                    </div>
+                </div>
+                <div class="large">
+                    <div class="img-large">
+                        <img src="assets/Jeep-wrangler-barra-estabilizadora-desk.webp" alt="">
+                    </div>
+                    <p>Texto Descritivo</p>
+                </div>
+            </div>
         </section>
         <section id="cores">
 
