image path update

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="/assets/logo_jeep.png" alt="Logo Jeep">
+                <img src="assets/logo_jeep.png" alt="Logo Jeep">
             </div>
             <menu>
                 <a href="">Início</a>
@@ -25,11 +25,11 @@
     <main>
         <section id="inicio">
             <div class="banner">
-                <img src="/assets/jeep-wrangler-bloqueador-diferencial-desk.webp" alt="Jeep Wrangler Bloqueador Diferencial">
+                <img src="assets/jeep-wrangler-bloqueador-diferencial-desk.webp" alt="Jeep Wrangler Bloqueador Diferencial">
             </div>
             <h1>Exclusivo <span>Motor 2.0</span> Turbo</h1>
             <div class="lama">
-                <img src="/assets/transparente-lama.webp" alt="">
+                <img src="assets/transparente-lama.webp" alt="">
             </div>
         </section>
         <section id="galeria">
@@ -37,22 +37,22 @@
                 <h2>Galeria <span>de Fotos</span></h2>
                 <div class="thumbs">
                     <div class="thumb">
-                        <img src="/assets/jeep-wrangler-bloqueador-diferencial-desk.webp" alt="">
+                        <img src="assets/jeep-wrangler-bloqueador-diferencial-desk.webp" alt="">
                     </div>
                     <div class="thumb">
-                        <img src="/assets/RUBICON-trail-rated-mobile.webp" alt="">
+                        <img src="assets/RUBICON-trail-rated-mobile.webp" alt="">
                     </div>
                     <div class="thumb">
-                        <img src="/assets/Jeep-wrangler-barra-estabilizadora-desk.webp" alt="">
+                        <img src="assets/Jeep-wrangler-barra-estabilizadora-desk.webp" alt="">
                     </div>
                     <div class="thumb">
-                        <img src="/assets/jeep-rubicon-red.webp" alt="">
+                        <img src="assets/jeep-rubicon-red.webp" alt="">
                     </div>
                     <div class="thumb">
-                        <img src="/assets/jeep-wrangler-rubicon-gray.webp" alt="">
+                        <img src="assets/jeep-wrangler-rubicon-gray.webp" alt="">
                     </div>
                     <div class="thumb">
-                        <img src="/assets/jeep-wrangler-white.webp" alt="">
+                        <img src="assets/jeep-wrangler-white.webp" alt="">
                     </div>
                 </div>
                 <div class="large">
@@ -73,7 +73,7 @@
     <footer>
         <div class="conteudo">
             <div class="logo">
-                <img src="/assets/logo_jeep.png" alt="Logo Jeep">
+                <img src="assets/logo_jeep.png" alt="Logo Jeep">
             </div>
             <div class="marcas">
                 <a href="">Ram</a>
